[STYLE] (cards) Adjusted alignment, quick fix, TODO: need to do this properly

--- a/src/components/card/Card.css
+++ b/src/components/card/Card.css
@@ -12,11 +12,15 @@
 }
 
 .card img {
-  max-width: 20%;
+  width: 20%;
+  padding-top: 50px;
 }
+
 .card .text {
   padding: 0 20px 20px;
+  font-size: 24px;
 }
+
 .card .text > button {
   border: 0;
   color: white;
