--- a/src/components/cardgrid/CardGrid.css
+++ b/src/components/cardgrid/CardGrid.css
@@ -5,5 +5,5 @@
 }
 
 main.cards {
-  margin: 0 50px;
+  margin: 0 50px 50px 50px;
 }
